--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DATABASE=mongodb+srv://veera:<PASSWORD>@veera.qkslpzb.mongodb.net/veera?retryWri
 DATABASE_PASSWORD=veera
 JWT_SECRET=veera-venkata-sai-durga-prasad
 JWT_EXPIRES_IN=5d
+JWT_COOKIE_EXPIRES_IN=90
 APP_URL=http://localhost:3000
 Email_USERNAME=b30dbdb1fd0422
 EMAIL_PASSWORD=74bf2cba3e4893
